# wise_units_example

./: BUILD.bazel  Cargo.toml  WORKSPACE
cargo/: crates.bzl  local.bzl
cargo/remote/: BUILD.approx-0.5.1.bazel  BUILD.block-buffer-0.7.3.bazel  BUILD.block-padding-0.1.5.bazel  BUILD.byte-tools-0.3.1.bazel  BUILD.byteorder-1.4.3.bazel  BUILD.digest-0.8.1.bazel  BUILD.fake-simd-0.1.2.bazel  BUILD.generic-array-0.12.4.bazel  BUILD.num-traits-0.2.14.bazel  BUILD.opaque-debug-0.2.3.bazel  BUILD.pest-2.1.3.bazel  BUILD.pest_derive-2.1.0.bazel  BUILD.pest_generator-2.1.3.bazel  BUILD.pest_meta-2.1.3.bazel  BUILD.sha-1-0.8.2.bazel  BUILD.syn-1.0.90.bazel  BUILD.wise_units-0.22.0.bazel
src/: main.rs
